[gd_scene load_steps=3 format=3 uid="uid://bm73oge7dw6oh"]

[ext_resource type="PackedScene" path="res://entities/menu/menu_selector.tscn" id="1_a6nw7"]
[ext_resource type="Script" path="res://file_list.gd" id="1_def0f"]

[node name="FileList" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_def0f")

[node name="MenuSelector" parent="." instance=ExtResource("1_a6nw7")]

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_right = 895.0
offset_bottom = 628.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 300)
layout_mode = 2

[connection signal="item_deselected" from="MenuSelector" to="." method="_on_menu_selector_item_deselected"]
[connection signal="item_entered" from="MenuSelector" to="." method="_on_menu_selector_item_entered"]
[connection signal="item_highlighted" from="MenuSelector" to="." method="_on_menu_item_highlighted"]
[connection signal="item_selected" from="MenuSelector" to="." method="_on_menu_selector_item_selected"]
[connection signal="reached_end" from="MenuSelector" to="." method="_on_menu_reached_end"]
[connection signal="reached_start" from="MenuSelector" to="." method="_on_menu_reached_start"]
